<resources>
    <string name="app_name">meal_meat new</string>
    <string name="email">Email</string>
    <string name="Password">Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="registration_page">Registration Page</string>
    <string name="password">Password</string>
    <string name="logotut">Logotut</string>
    <string name="open_nav">Open Navigation</string>
    <string name="close_nav">Close Navigation</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>